_sass/components/_talks.scss
.talks {
  @include display(flex);
  // @include align-items(top);
  @include flex-direction(column);
  // @include flex-wrap(wrap);
  @include justify-content(space-around);

  list-style: none;
  padding: 0;

  $base-background-color: white !default;
  $base-border-color: gainsboro !default;
  $base-border-radius: 3px !default;
  $base-background-color: white !default;
  $base-spacing: 1.5em !default;
  $action-color: #477DCA !default;
  $dark-gray: #333 !default;
  $base-font-color: $dark-gray !default;
  $card-border-color: $base-border-color;
  $card-border: 1px solid $card-border-color;
  $card-background: lighten($card-border-color, 10%);

  > li {
    padding-top: 1em;
    padding-bottom: 2em;
    &::after {
      display: block;
      content : " ";
      width: 50%;
      border-bottom: $card-border;
      margin: 0 auto;
    }
    > h2 {
      width: 100%;
      display: block;

      margin-bottom: .5em;
      font-weight: bold;

      a {
        opacity: 1;
      }
    }
  }

  .badge {
    padding: 0 0.5em;
    border: 1px solid $brand_blue;
    margin-right: 0.5em;
    background: $brand_blue;
    color: white;
  }

  .wrap {
    @include display(flex);
    @include flex-direction(column-reverse);
    @include flex-wrap(nowrap);
  }


  .abstract {
    @include flex-grow(2);

    blockquote {
      border-left: .25em solid #99aaff;
      margin-left: 0;
      padding-left: 1.5em;
    }
  }

  .speaker {
    @include display(flex);
    @include flex-wrap(nowrap);
    text-align: center;
    margin: 2em 1em;

    @media only screen and (max-width: 479px) {
      @include flex-direction(column);
    }

    .portrait {
      @media only screen and (min-width: 480px) {
        @include flex-basis(15em);
      }

      img {
        width: 150px;
        display: inline-block;
        margin: 0.5em auto;

        background: url(/assets/speakers/no-photo.jpg);
        background-size: contain;
      }
    }

    .desc {
      @include flex-grow(4);
      text-transform: none;
      padding: 8px;
      color: $base-font-color;
      text-align: justify;
      font-size: 0.65em;
      font-weight: normal;
      p {
        max-width: 1000px;
      }
    }

    .links {
      list-style: none;
      padding: 0;
      margin: 0;
      line-height: 1.25em;
      font-size: 2em;
      li {
        display: inline;
        margin: 0 3px;
      }
    }
  }

  svg {
    height: 0.75em;
    width: 0.75em;
    vertical-align: middle;
    path {
      fill: $base-font-color;
    }
  }

  .name {
    font-size: 1.2em
  }
}

